--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
   },
   "plugins": ["react"],
   "rules": {
+    "no-param-reassign": 0,
     "quotes": [1, "single", { "avoidEscape": true }],
     "no-use-before-define": 0,
     "prefer-default-export": 0,
