--- a/package.json
+++ b/package.json
@@ -11,9 +11,26 @@
     "node": ">=8.15.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "bootstrap": "^4.3.1",
+    "connected-react-router": "^6.5.2",
+    "history": "^4.9.0",
+    "invariant": "^2.2.4",
+    "lodash": "^4.17.15",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-helmet": "^5.2.1",
+    "react-modal": "^3.9.1",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-select": "^3.0.4",
+    "reactstrap": "^8.0.1",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
