--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.3.1",
     "connected-react-router": "^6.5.2",
     "history": "^4.9.0",
+    "immutable": "^4.0.0-rc.12",
     "invariant": "^2.2.4",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
@@ -30,6 +31,8 @@
     "react-select": "^3.0.4",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
+    "redux-actions": "^2.6.5",
+    "redux-immutable": "^4.0.0",
     "redux-saga": "^1.0.5"
   },
   "scripts": {
