--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
     "redux-immutable": "^4.0.0",
-    "redux-saga": "^1.0.5"
+    "redux-saga": "^1.0.5",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
