--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.5.2",
+    "formik": "^1.5.8",
     "history": "^4.9.0",
     "immutable": "^4.0.0-rc.12",
     "invariant": "^2.2.4",
@@ -26,7 +27,6 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "react-modal": "^3.9.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
@@ -36,7 +36,8 @@
     "redux-actions": "^2.6.5",
     "redux-immutable": "^4.0.0",
     "redux-saga": "^1.0.5",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
