--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.5.2",
+    "country-state-city": "^1.0.0",
     "formik": "^1.5.8",
     "history": "^4.9.0",
     "immutable": "^4.0.0-rc.12",
